fix avatar missing color

--- a/spirit/core/static/spirit/stylesheets/src/_base.scss
+++ b/spirit/core/static/spirit/stylesheets/src/_base.scss
@@ -997,6 +997,7 @@ del.diff {
     justify-content: center;
     font-size: 50px;
     line-height: 50px;
+    color: var(--st-text-user-pic);
     background-color: var(--st-bg-user-pic);
     @media #{$medium} {
       font-size: 100px;
